--- a/Search.html
+++ b/Search.html
@@ -83,6 +83,15 @@
       .boxshadowcard {
         box-shadow: 1px 3px 1px 1px #00000073;
       }
+      .containercard {
+        transition: transform 0.3s ease-in-out;
+      }
+
+      .containercard:hover {
+        transform: scale(1.2);
+        z-index: 3;
+        cursor: pointer;
+      }
     </style>
   </head>
   <body>
@@ -337,7 +346,7 @@
           <div class="container">
             <div class="row g-5 d-flex">
               <div
-                class="col-xxl-3 col-md-6 col-lg-6 col-xl-4 col-12 ms-5 ms-sm-0 col-sm-6"
+                class="col-xxl-3 col-md-6 col-lg-6 col-xl-4 col-12 ms-5 ms-sm-0 col-sm-6 containercard"
               >
                 <div
                   class="colore1 position-relative overflow-hidden rounded-3"
@@ -357,7 +366,7 @@
                 </div>
               </div>
               <div
-                class="col-xxl-3 col-md-6 col-lg-6 col-xl-4 col-12 ms-5 ms-sm-0 col-sm-6"
+                class="col-xxl-3 col-md-6 col-lg-6 col-xl-4 col-12 ms-5 ms-sm-0 col-sm-6 containercard"
               >
                 <div
                   class="colore2 position-relative overflow-hidden rounded-3"
@@ -377,7 +386,7 @@
                 </div>
               </div>
               <div
-                class="col-xxl-3 col-md-6 col-lg-6 col-xl-4 col-12 ms-5 ms-sm-0 col-sm-6"
+                class="col-xxl-3 col-md-6 col-lg-6 col-xl-4 col-12 ms-5 ms-sm-0 col-sm-6 containercard"
               >
                 <div
                   class="colore3 position-relative overflow-hidden rounded-3"
@@ -397,7 +406,7 @@
                 </div>
               </div>
               <div
-                class="col-xxl-3 col-md-6 col-lg-6 col-xl-4 col-12 ms-5 ms-sm-0 col-sm-6"
+                class="col-xxl-3 col-md-6 col-lg-6 col-xl-4 col-12 ms-5 ms-sm-0 col-sm-6 containercard"
               >
                 <div
                   class="colore4 position-relative overflow-hidden rounded-3"
@@ -417,7 +426,7 @@
                 </div>
               </div>
               <div
-                class="col-xxl-3 col-md-6 col-lg-6 col-xl-4 col-12 ms-5 ms-sm-0 col-sm-6"
+                class="col-xxl-3 col-md-6 col-lg-6 col-xl-4 col-12 ms-5 ms-sm-0 col-sm-6 containercard"
               >
                 <div
                   class="colore5 position-relative overflow-hidden rounded-3"
@@ -437,7 +446,7 @@
                 </div>
               </div>
               <div
-                class="col-xxl-3 col-md-6 col-lg-6 col-xl-4 col-12 ms-5 ms-sm-0 col-sm-6"
+                class="col-xxl-3 col-md-6 col-lg-6 col-xl-4 col-12 ms-5 ms-sm-0 col-sm-6 containercard"
               >
                 <div
                   class="colore6 position-relative overflow-hidden rounded-3"
@@ -457,7 +466,7 @@
                 </div>
               </div>
               <div
-                class="col-xxl-3 col-md-6 col-lg-6 col-xl-4 col-12 ms-5 ms-sm-0 col-sm-6"
+                class="col-xxl-3 col-md-6 col-lg-6 col-xl-4 col-12 ms-5 ms-sm-0 col-sm-6 containercard"
               >
                 <div
                   class="colore7 position-relative overflow-hidden rounded-3"
@@ -477,7 +486,7 @@
                 </div>
               </div>
               <div
-                class="col-xxl-3 col-md-6 col-lg-6 col-xl-4 col-12 ms-5 ms-sm-0 col-sm-6"
+                class="col-xxl-3 col-md-6 col-lg-6 col-xl-4 col-12 ms-5 ms-sm-0 col-sm-6 containercard"
               >
                 <div
                   class="colore8 position-relative overflow-hidden rounded-3"
