--- a/playlist.html
+++ b/playlist.html
@@ -7,6 +7,86 @@
     <link rel="stylesheet" href="./assets/custom-bootstrap.css" />
     <link rel="stylesheet" href="./assets/css/Bottoni.css" />
     <link rel="stylesheet" href="/assets/css/playlist.css" />
+    <style>
+      ul li {
+        transition: background-color 0.3s ease, color 0.3s ease;
+      }
+
+      ul li:hover {
+        background-color: rgb(68, 68, 68);
+        cursor: pointer;
+      }
+      nav p {
+        transition: background-color 0.3s ease, color 0.3s ease;
+      }
+
+      nav p:hover {
+        background-color: rgb(68, 68, 68);
+        cursor: pointer;
+      }
+      .custom-scroll {
+        overflow-y: auto;
+        max-height: 300px;
+      }
+
+      .custom-scroll::-webkit-scrollbar {
+        width: 6px;
+      }
+
+      .custom-scroll::-webkit-scrollbar-thumb {
+        background-color: grey;
+      }
+
+      .custom-scroll::-webkit-scrollbar-track {
+        background-color: #000000;
+      }
+      .player-bar {
+        position: fixed;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        background-color: #181818;
+        color: white;
+        padding: 10px;
+        z-index: 1050;
+      }
+      .progress-bar {
+        width: 100%;
+      }
+      .player-controls i {
+        font-size: 20px;
+        cursor: pointer;
+      }
+      body {
+        padding-bottom: 60px;
+      }
+      .card {
+        background-color: #212529;
+      }
+      .card:hover {
+        background-color: #32383e;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+      }
+      .btn {
+        display: inline-block;
+        border: 1px solid #ccc;
+        background-color: #333333a7;
+        color: #ece1e1;
+        text-decoration: none;
+        cursor: pointer;
+        border-radius: 5px;
+      }
+
+      .btn:hover {
+        background-color: black;
+      }
+
+      .btn svg {
+        width: 60px;
+        height: 60px;
+        transition: transform 0.3s ease;
+      }
+    </style>
   </head>
   <body class="bg-dark">
     <div class="container-fluid">
