--- a/home.html
+++ b/home.html
@@ -569,7 +569,7 @@
           </div>
         </article>
         <div
-          class="col-md-2 col-lg-2 d-none d-sm-block bg-black text-white min-vh-100"
+          class="col-md-2 col-lg-2 d-none d-md-block bg-black text-white min-vh-100"
         >
           <div class="d-flex justify-content-between align-items-center mb-3">
             <h6 class="mb-0">Attività Amici</h6>
