--- a/home.html
+++ b/home.html
@@ -143,11 +143,8 @@
                   </svg>
                 </a>
               </li>
-              <li class="nav-item">
-                <a
-                  href="/home.html"
-                  class="nav-link text-white rounded-bottom-3 rounded-top-3"
-                >
+              <li class="nav-item rounded-bottom-3 rounded-top-3">
+                <a href="/home.html" class="nav-link text-white">
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
                     width="16"
