ULTIMO GIGA PUSH

--- a/artist.html
+++ b/artist.html
@@ -329,7 +329,9 @@
 
         <article class="col-md-9 col-lg-7 min-vh-100" id="events-row"></article>
         <!-- BARRA DESTRA -->
-        <div class="col-lg-2 d-none d-sm-block bg-black text-white min-vh-100">
+        <div
+          class="col-md-2 col-lg-2 d-none d-md-block bg-black text-white min-vh-100 py-4"
+        >
           <div class="d-flex justify-content-between align-items-center mb-3">
             <h6 class="mb-0">Attività Amici</h6>
             <div>
@@ -363,7 +365,15 @@
           <div class="container">
             <div class="card">
               <div class="card-body row bg-black text-white position-relative">
-                <div class="col-2"></div>
+                <div class="col-2">
+                  <img
+                    src="./chiara.png"
+                    alt="chiara"
+                    width="40px"
+                    height="40px"
+                    class="rounded-5 object-fit-cover"
+                  />
+                </div>
                 <div class="col-8 container text-center">
                   <p class="m-0" style="font-size: 10px">Chiara Sanasi</p>
 
@@ -399,7 +409,15 @@
           <div class="container">
             <div class="card">
               <div class="card-body row bg-black text-white position-relative">
-                <div class="col-2"></div>
+                <div class="col-2">
+                  <img
+                    src="./assets/pierattilio.jpeg"
+                    alt="chiara"
+                    width="40px"
+                    height="40px"
+                    class="rounded-5 object-fit-cover"
+                  />
+                </div>
                 <div class="col-8 container text-center">
                   <p class="m-0" style="font-size: 10px">
                     Pierattilio Correale
@@ -437,7 +455,15 @@
           <div class="container">
             <div class="card">
               <div class="card-body row bg-black text-white position-relative">
-                <div class="col-2"></div>
+                <div class="col-2">
+                  <img
+                    src="./assets/pietro.jpg"
+                    alt="chiara"
+                    width="40px"
+                    height="40px"
+                    class="rounded-5 object-fit-cover"
+                  />
+                </div>
                 <div class="col-8 container text-center">
                   <p class="m-0" style="font-size: 10px">Pietro Sorbo</p>
 
@@ -473,7 +499,15 @@
           <div class="container">
             <div class="card">
               <div class="card-body row bg-black text-white position-relative">
-                <div class="col-2"></div>
+                <div class="col-2">
+                  <img
+                    src="./riccardo.png"
+                    alt="chiara"
+                    width="40px"
+                    height="40px"
+                    class="rounded-5 object-fit-cover"
+                  />
+                </div>
                 <div class="col-8 container text-center">
                   <p class="m-0" style="font-size: 10px">Riccardo Sangermano</p>
 
@@ -509,7 +543,15 @@
           <div class="container">
             <div class="card">
               <div class="card-body row bg-black text-white position-relative">
-                <div class="col-2"></div>
+                <div class="col-2">
+                  <img
+                    src="./assets/alessandro.jpeg"
+                    alt="chiara"
+                    width="40px"
+                    height="40px"
+                    class="rounded-5 object-fit-cover"
+                  />
+                </div>
                 <div class="col-8 container text-center">
                   <p class="m-0 flex-nowrap" style="font-size: 10px">
                     Alessando Di Giannantonio
