--- a/playlist.html
+++ b/playlist.html
@@ -478,12 +478,50 @@
 
         <!-- Chiusura dell'elemento article -->
         <div
-          class="col-md-2 col-lg-2 d-none d-md-block bg-black text-white min-vh-100"
+          class="col-md-2 col-lg-2 d-none d-md-block bg-black text-white min-vh-100 py-4"
         >
+          <div class="d-flex justify-content-between align-items-center mb-3">
+            <h6 class="mb-0">Attività Amici</h6>
+            <div>
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="16"
+                height="16"
+                fill="currentColor"
+                class="bi bi-people-fill me-2"
+                viewBox="0 0 16 16"
+              >
+                <path
+                  d="M7 14s-1 0-1-1 1-4 5-4 5 3 5 4-1 1-1 1zm4-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6m-5.784 6A2.24 2.24 0 0 1 5 13c0-1.355.68-2.75 1.936-3.72A6.3 6.3 0 0 0 5 9c-4 0-5 3-5 4s1 1 1 1zM4.5 8a2.5 2.5 0 1 0 0-5 2.5 2.5 0 0 0 0 5"
+                />
+              </svg>
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="16"
+                height="16"
+                fill="currentColor"
+                class="bi bi-x-lg"
+                viewBox="0 0 16 16"
+              >
+                <path
+                  d="M2.146 2.854a.5.5 0 1 1 .708-.708L8 7.293l5.146-5.147a.5.5 0 0 1 .708.708L8.707 8l5.147 5.146a.5.5 0 0 1-.708.708L8 8.707l-5.146 5.147a.5.5 0 0 1-.708-.708L7.293 8z"
+                />
+              </svg>
+            </div>
+          </div>
+
           <div class="container">
             <div class="card">
               <div class="card-body row bg-black text-white position-relative">
-                <div class="col-2"></div>
+                <div class="col-2">
+                  <img
+                    src="./chiara.png"
+                    alt="chiara"
+                    width="40px"
+                    height="40px"
+                    class="rounded-5 object-fit-cover"
+                  />
+                </div>
                 <div class="col-8 container text-center">
                   <p class="m-0" style="font-size: 10px">Chiara Sanasi</p>
 
@@ -519,7 +557,15 @@
           <div class="container">
             <div class="card">
               <div class="card-body row bg-black text-white position-relative">
-                <div class="col-2"></div>
+                <div class="col-2">
+                  <img
+                    src="./assets/pierattilio.jpeg"
+                    alt="chiara"
+                    width="40px"
+                    height="40px"
+                    class="rounded-5 object-fit-cover"
+                  />
+                </div>
                 <div class="col-8 container text-center">
                   <p class="m-0" style="font-size: 10px">
                     Pierattilio Correale
@@ -557,7 +603,15 @@
           <div class="container">
             <div class="card">
               <div class="card-body row bg-black text-white position-relative">
-                <div class="col-2"></div>
+                <div class="col-2">
+                  <img
+                    src="./assets/pietro.jpg"
+                    alt="chiara"
+                    width="40px"
+                    height="40px"
+                    class="rounded-5 object-fit-cover"
+                  />
+                </div>
                 <div class="col-8 container text-center">
                   <p class="m-0" style="font-size: 10px">Pietro Sorbo</p>
 
@@ -593,7 +647,15 @@
           <div class="container">
             <div class="card">
               <div class="card-body row bg-black text-white position-relative">
-                <div class="col-2"></div>
+                <div class="col-2">
+                  <img
+                    src="./riccardo.png"
+                    alt="chiara"
+                    width="40px"
+                    height="40px"
+                    class="rounded-5 object-fit-cover"
+                  />
+                </div>
                 <div class="col-8 container text-center">
                   <p class="m-0" style="font-size: 10px">Riccardo Sangermano</p>
 
@@ -629,7 +691,15 @@
           <div class="container">
             <div class="card">
               <div class="card-body row bg-black text-white position-relative">
-                <div class="col-2"></div>
+                <div class="col-2">
+                  <img
+                    src="./assets/alessandro.jpeg"
+                    alt="chiara"
+                    width="40px"
+                    height="40px"
+                    class="rounded-5 object-fit-cover"
+                  />
+                </div>
                 <div class="col-8 container text-center">
                   <p class="m-0 flex-nowrap" style="font-size: 10px">
                     Alessando Di Giannantonio
@@ -649,6 +719,7 @@
                         d="M1 11a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v3a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1zm5-4a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v7a1 1 0 0 1-1 1H7a1 1 0 0 1-1-1zm5-5a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1h-2a1 1 0 0 1-1-1z"
                       />
                     </svg>
+
                     <p class="m-0 ml-2" style="font-size: 7px">
                       Hotline bling - Drake
                     </p>
