--- a/artist.html
+++ b/artist.html
@@ -186,7 +186,7 @@
                 >
               </li>
               <li class="nav-item mt-3 rounded-bottom-3 rounded-top-3">
-                <a href="#" class="nav-link text-white">
+                <a href="./playlist.html" class="nav-link text-white">
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
                     width="16"
