--- a/playlist.html
+++ b/playlist.html
@@ -174,7 +174,7 @@
                 >
               </li>
               <li class="nav-item mt-3 rounded-bottom-3 rounded-top-3">
-                <a href="#" class="nav-link text-white">
+                <a href="./playlist.html" class="nav-link text-white">
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
                     width="16"
@@ -323,6 +323,7 @@
                 <div class="col-12 col-md-6 mb-2 mb-md-0">
                   <div class="d-flex w-100">
                     <button
+                      onclick="history.back()"
                       class="my-button rounded-circle d-flex align-items-center justify-content-center me-2"
                       style="width: 50px; height: 50px"
                     >
@@ -340,6 +341,7 @@
                       </svg>
                     </button>
                     <button
+                      onclick="history.forward()"
                       class="my-button rounded-circle d-flex align-items-center justify-content-center"
                       style="width: 50px; height: 50px"
                     >
