--- a/home.html
+++ b/home.html
@@ -398,7 +398,7 @@
                   <p>Pierattilio Correale</p>
                 </option>
                 <option value="2">Chiara Sanasi</option>
-                <option value="3">Pietro sorbo</option>
+                <option value="3">Pietro Sorbo</option>
                 <option value="3">Alessandro di Giannantonio</option>
               </select>
             </div>
