--- a/home.html
+++ b/home.html
@@ -349,7 +349,6 @@
             <div class="col-12 col-md-6 mb-2 mb-md-0">
               <div class="d-flex w-100">
                 <button
-                  onclick="history.back()"
                   class="btn btn-secondary rounded-circle d-flex align-items-center justify-content-center me-2"
                   style="width: 50px; height: 50px"
                 >
@@ -368,7 +367,6 @@
                 </button>
 
                 <button
-                  onclick="history.forward()"
                   class="btn btn-secondary rounded-circle d-flex align-items-center justify-content-center"
                   style="width: 50px; height: 50px"
                 >
@@ -391,12 +389,7 @@
             <div class="col-12 col-md-6 text-md-end">
               <select class="form-select bg-black text-light rounded-5">
                 <option selected>Riccardo Sangermano</option>
-                <option value="1">
-                  <div style="height: 25px">
-                    <img src="./assets/pierattilio.jpeg" />
-                  </div>
-                  <p>Pierattilio Correale</p>
-                </option>
+                <option value="1">Pierattilio Correale</option>
                 <option value="2">Chiara Sanasi</option>
                 <option value="3">Pietro Sorbo</option>
                 <option value="3">Alessandro di Giannantonio</option>
@@ -573,7 +566,7 @@
           </div>
         </article>
         <div
-          class="col-md-2 col-lg-2 d-none d-md-block bg-black text-white min-vh-100 py-4"
+          class="col-md-2 col-lg-2 d-none d-md-block bg-black text-white min-vh-100"
         >
           <div class="d-flex justify-content-between align-items-center mb-3">
             <h6 class="mb-0">Attività Amici</h6>
@@ -608,15 +601,7 @@
           <div class="container">
             <div class="card">
               <div class="card-body row bg-black text-white position-relative">
-                <div class="col-2">
-                  <img
-                    src="./chiara.png"
-                    alt="chiara"
-                    width="40px"
-                    height="40px"
-                    class="rounded-5 object-fit-cover"
-                  />
-                </div>
+                <div class="col-2"></div>
                 <div class="col-8 container text-center">
                   <p class="m-0" style="font-size: 10px">Chiara Sanasi</p>
 
@@ -652,15 +637,7 @@
           <div class="container">
             <div class="card">
               <div class="card-body row bg-black text-white position-relative">
-                <div class="col-2">
-                  <img
-                    src="./assets/pierattilio.jpeg"
-                    alt="chiara"
-                    width="40px"
-                    height="40px"
-                    class="rounded-5 object-fit-cover"
-                  />
-                </div>
+                <div class="col-2"></div>
                 <div class="col-8 container text-center">
                   <p class="m-0" style="font-size: 10px">
                     Pierattilio Correale
@@ -698,15 +675,7 @@
           <div class="container">
             <div class="card">
               <div class="card-body row bg-black text-white position-relative">
-                <div class="col-2">
-                  <img
-                    src="./assets/pietro.jpg"
-                    alt="chiara"
-                    width="40px"
-                    height="40px"
-                    class="rounded-5 object-fit-cover"
-                  />
-                </div>
+                <div class="col-2"></div>
                 <div class="col-8 container text-center">
                   <p class="m-0" style="font-size: 10px">Pietro Sorbo</p>
 
@@ -742,15 +711,7 @@
           <div class="container">
             <div class="card">
               <div class="card-body row bg-black text-white position-relative">
-                <div class="col-2">
-                  <img
-                    src="./riccardo.png"
-                    alt="chiara"
-                    width="40px"
-                    height="40px"
-                    class="rounded-5 object-fit-cover"
-                  />
-                </div>
+                <div class="col-2"></div>
                 <div class="col-8 container text-center">
                   <p class="m-0" style="font-size: 10px">Riccardo Sangermano</p>
 
@@ -786,15 +747,7 @@
           <div class="container">
             <div class="card">
               <div class="card-body row bg-black text-white position-relative">
-                <div class="col-2">
-                  <img
-                    src="./assets/alessandro.jpeg"
-                    alt="chiara"
-                    width="40px"
-                    height="40px"
-                    class="rounded-5 object-fit-cover"
-                  />
-                </div>
+                <div class="col-2"></div>
                 <div class="col-8 container text-center">
                   <p class="m-0 flex-nowrap" style="font-size: 10px">
                     Alessando Di Giannantonio
